<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iDiscoverIt</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_voice_recording">Voice Record</string>
    <string name="fileUpload">Send to cloud</string>
    <string name="title_activity_file_upload_to_cloud">Upload</string>
    <string name="title_activity_home">iDiscoverit</string>
    <string name="home">Home</string>
    <string name="recorder">Recorder</string>
    <string name="login_title">Login to iDiscoverIt</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_audiotron_player">Audiotron Player</string>
    <string name="title_activity_category_list_display">Categories</string>
    <string name="Stories">Stories</string>
    <string name="audiotron_player">audiotron_player</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_streaming_media_player">StreamingMediaPlayer</string>
    <string name="stream">Stream</string>
    <string name="title_activity_stream_audiotrons">Download Audiotron</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_audiotrons_in_category_display">Audiotrons Display</string>
    <string name="audioTitle">audiotron title</string>
    <string name="startRec">Click to record</string>
    <string name="stopRec">Stop Recording</string>
    <string name="saveAudiotron">save</string>
    <string name="pick_category">Pick a category</string>
    <string name="TextView">TextView</string>
    <string name="audio_images">Audiotron Images</string>
    <string name="categories">Categories</string>
    <string name="profile">Profile</string>
    <string name="me">Me</string>
    <string name="upload">Upload</string>
    <string name="custom_audiotron_title">Enter Audiotron Title</string>
    <string name="title_activity_user_profile">UserProfile Activity</string>
    <string name="title_activity_profile">Profile Activity</string>
    <string name="title_activity_ud__my_auditrons_acitivity">My Audiotrons Activity</string>
    <string name="title_activity_ud__my_favorites">My Favorite Audiotrons Activity</string>
    <string name="my_activity">My Audiotrons</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_profile_name">My Profile</string>
    <string name="logout">Logout</string>
    <string name="android_image">android_image</string>
    <string name="back_btn">Backtrack</string>
    <string name="play_btn">Playtrack</string>
    <string name="forward_btn">Forwardtrack</string>
    <string name="custom_tag_name">Enter Tag Name</string>
    <string name="tagButton">Tag Button</string>
    <string name="mass_upload">Upload Multiple Audiotrons</string>
    <string name="title_activity_ud__my_audiotrons_in_tabs"></string>
    <string name="title_activity_ud__my_audiotrons__sdcard">My Audiotrons on SDcard</string>
    <string name="title_activity_audiotrons_in_category_tab"></string>
    <string name="title_activity_new_audiotrons_in_category_display">Assorted/New Audiotrons</string>
    <string name="upload_service_started">Uploading Audiotrons To Cloud</string>
    <string name="upload_service_stopped">Uploading audiotrons stopped</string>
    <string name="title_activity_empty">Empty</string>
    <string name="search_hint">tags,audiotron-names</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_list">Search Results</string>
    <string name="hall_of_fame">Fame Board</string>
    <string name="help">Help</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help_table">Help Table</string>
    <string name="done">Done</string>
    <string name="never_show_again">Please do not show again.</string>
    <string name="record_time"><u>Recording Time</u></string>

    <color name="transparent">#00000000</color>
	<!-- <color name="textcolor">#AA000000</color> -->
	<color name="textcolor">#0000A0</color>
    <string name="title_activity_vr__help">VR_HelpActivity</string>
    <string name="title_activity_act__help">ACT_HelpActivity</string>
    <string name="title_activity_ud__profile__help">UD_Profile_HelpActivity</string>
    <string name="title_activity_my_audiotrons__sdcard__help">MyAudiotrons_SDcard_HelpActivity</string>

</resources>